tests/ui/lang-items/start_lang_item_args.missing_ret.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:29:83
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const u8, _sigpipe: u8) {}
   |                                                                                   ^ expected `isize`, found `()`
   |
   = note: expected signature `fn(fn() -> _, _, _, _) -> isize`
              found signature `fn(fn() -> _, _, _, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
